--- a/app/src/main/res/layout/activity_atur_parts_new.xml
+++ b/app/src/main/res/layout/activity_atur_parts_new.xml
@@ -120,7 +120,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView23"
+                        android:id="@+id/tglTerima"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:text="STATUS"
@@ -266,7 +266,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView29"
+                        android:id="@+id/tglJatuhTempo"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:text="MARGIN/HARGA"
