--- a/app/src/main/res/layout/activity_atur_terima_part.xml
+++ b/app/src/main/res/layout/activity_atur_terima_part.xml
@@ -75,7 +75,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView33"
+                        android:id="@+id/tglPesan"
                         android:layout_width="110sp"
                         android:layout_height="50sp"
                         android:layout_weight="1"
@@ -105,7 +105,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView29"
+                        android:id="@+id/tglJatuhTempo"
                         android:layout_width="120sp"
                         android:layout_height="50sp"
                         android:layout_margin="5dp"
@@ -164,7 +164,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView23"
+                        android:id="@+id/tglTerima"
                         android:layout_width="100sp"
                         android:layout_height="50sp"
                         android:layout_weight="1"
