--- a/app/src/main/res/layout/activity_detail_part_diterima.xml
+++ b/app/src/main/res/layout/activity_detail_part_diterima.xml
@@ -61,7 +61,7 @@
                     android:id="@+id/textView23"
                     android:layout_width="match_parent"
                     android:layout_height="50sp"
-                    android:text="NAMA PART" />
+                    android:text="Nama PART" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -92,7 +92,6 @@
                     android:text="HARGA BELI/UNIT" />
 
                 <TextView
-                    android:id="@+id/textView29"
                     android:layout_width="match_parent"
                     android:layout_height="50sp"
                     android:text="DISCOUNT BELI" />
@@ -129,6 +128,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50sp"
                     android:ems="10"
+                    android:enabled="false"
                     android:inputType="textPersonName" />
 
                 <LinearLayout
