--- a/app/src/main/res/layout/activity_atur_jurnal_.xml
+++ b/app/src/main/res/layout/activity_atur_jurnal_.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,44 +7,16 @@
     android:layout_gravity="center"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:orientation="vertical">
-
-
-        <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
-
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar_atur_jurnal"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"
-                    app:popupTheme="@style/AppTheme.PopupOverlay">
-
-                </android.support.v7.widget.Toolbar>
-            </FrameLayout>
-
-        </android.support.design.widget.AppBarLayout>
+        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
             android:id="@+id/layout_penugasan"
-            android:layout_width="348dp"
-            android:layout_height="466dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/border_solid"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -53,8 +25,8 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_margin="10dp"
                     android:layout_height="match_parent"
+                    android:layout_margin="10dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -63,33 +35,17 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:text="TANGGAL"
+                        android:layout_weight="1"
                         android:textStyle="bold" />
 
-                    <android.support.design.widget.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    <TextView
+                        android:id="@+id/tv_date_jurnal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="100dp"
-                        android:visibility="gone"
-                        android:textAlignment="center"
-                        android:id="@+id/tl_date">
-
-                        <EditText
-                            android:id="@+id/et_tanggal_jurnal"
-                            android:gravity="center"
-                            android:layout_width="100dp"
-                            android:layout_height="match_parent"
-                            android:hint="TANGGAL" />
+                        android:layout_weight="1"
+                        android:drawableStart="@drawable/ic_date" />
 
 
-                    </android.support.design.widget.TextInputLayout>
-
-                    <Button
-                        android:id="@+id/btn_date_jurnal"
-                        android:background="@drawable/ic_date"
-                        android:layout_marginLeft="150dp"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -102,15 +58,16 @@
                         android:id="@+id/textView20"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="2"
+                        android:layout_weight="5"
                         android:text="JENIS TRANSAKSI"
                         android:textStyle="bold" />
 
                     <Spinner
                         android:id="@+id/sp_jenis_jurnal"
                         android:layout_width="180dp"
-                        android:entries="@array/jenis_jurnal"
                         android:layout_height="wrap_content"
+                        android:layout_weight="5"
+                        android:entries="@array/jenis_jurnal"
                         android:textAlignment="center" />
 
                 </LinearLayout>
@@ -125,40 +82,42 @@
                         android:id="@+id/textView21"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="2"
+                        android:layout_weight="5"
                         android:text="POS"
                         android:textStyle="bold" />
 
                     <Spinner
                         android:id="@+id/sp_pos_jurnal"
                         android:layout_width="190dp"
-                        android:entries="@array/pos_jurnal"
+                        android:layout_weight="5"
                         android:layout_height="wrap_content"
+                        android:entries="@array/pos_jurnal"
                         android:textAlignment="center" />
 
                 </LinearLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp">
+
+                    <EditText
+                        android:id="@+id/et_ket_jurnal"
                         android:layout_width="match_parent"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:inputType="text"
+                        android:hint="Keterangan" />
 
-                        <EditText
-                            android:id="@+id/et_ket_jurnal"
-                            android:hint="Keterangan"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-
-                    </android.support.design.widget.TextInputLayout>
+                </android.support.design.widget.TextInputLayout>
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
                     android:layout_gravity="center"
+                    android:layout_margin="10dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -166,19 +125,21 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="NO. KONTAK"
+                        android:layout_weight="1"
+                        android:layout_gravity="center"
                         android:textStyle="bold" />
 
-                    <Button
-                        android:id="@+id/btn_kontak_jurnal"
+                    <TextView
+                        android:id="@+id/tv_kontak_jurnal"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:layout_marginLeft="135dp"
-                        android:background="@drawable/ic_contact_phone"
-                        android:textAlignment="center" />
+                        android:drawableStart="@drawable/ic_contact_phone"
+                        android:layout_weight="1" />
 
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ly_periodeSewa_jurnal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
@@ -188,92 +149,49 @@
                         android:id="@+id/tv_sewa"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Periode Sewa"
                         android:layout_marginTop="10dp"
+                        android:text="Periode Sewa"
+                        android:layout_weight="1"
                         android:textStyle="bold" />
 
-                    <android.support.design.widget.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:visibility="gone"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/tl_mulai_sewa">
-
-                        <EditText
-                            android:id="@+id/et_mulai_sewa"
-                            android:layout_width="100dp"
-                            android:layout_height="match_parent"
-                            android:hint="Mulai"
-                           android:gravity="center"/>
-
-
-                    </android.support.design.widget.TextInputLayout>
-
-                    <android.support.design.widget.TextInputLayout
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:visibility="gone"
-                        android:layout_marginLeft="10dp"
-                        android:id="@+id/tl_selesai_sewa"
-                        >
-
-                        <EditText
-                            android:id="@+id/et_selesai_sewa"
-                            android:layout_width="100dp"
-                            android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:hint="Selesai" />
-
-
-                    </android.support.design.widget.TextInputLayout>
-
-                    <LinearLayout
-                        android:id="@+id/ly_btn_date_jurnal"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:id="@+id/btn_mulai_sewa"
+                    <TextView
+                        android:id="@+id/tv_mulaiSewa_jurnal"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:layout_marginLeft="60dp"
-                            android:background="@drawable/ic_date" />
+                        android:layout_weight="1"
+                        android:drawableLeft="@drawable/ic_date" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textStyle="bold"
-                            android:layout_marginRight="10dp"
-                            android:layout_marginLeft="10dp"
-                            android:textSize="16sp"
-                            android:text="-" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:textStyle="bold"
+                        android:text="-" />
 
-                        <Button
-                            android:id="@+id/btn_selesai_sewa"
+
+                    <TextView
+                        android:id="@+id/tv_selesaiSewa_jurnal"
                             android:layout_width="30dp"
+                        android:layout_weight="1"
                             android:layout_height="30dp"
-                            android:background="@drawable/ic_date" />
-                    </LinearLayout>
+                        android:drawableRight="@drawable/ic_date" />
 
 
                 </LinearLayout>
 
                 <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_height="wrap_content">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp">
 
                     <EditText
                         android:id="@+id/et_nota_jurnal"
-                        android:hint="NO. NOTA"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
+                        android:inputType="text"
+                        android:layout_height="wrap_content"
+                        android:hint="NO. NOTA" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -283,16 +201,37 @@
                 android:id="@+id/btn_simpan_jurnal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_gravity="end"
+                android:layout_margin="10dp"
                 android:background="@drawable/btn_rounded_accent"
                 android:text="SIMPAN"
                 android:textColor="@color/white_transparency" />
 
 
         </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
-    </LinearLayout>
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
 
-</FrameLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar_atur_jurnal"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            </android.support.v7.widget.Toolbar>
+        </FrameLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+
+</android.support.design.widget.CoordinatorLayout>
