--- a/app/src/main/res/layout/activity_atur_layanan_.xml
+++ b/app/src/main/res/layout/activity_atur_layanan_.xml
@@ -17,6 +17,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusable="true"
             android:orientation="vertical">
 
             <LinearLayout
@@ -96,6 +97,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:focusable="true"
+                    android:enabled="false"
                     android:ems="10"
                     android:hint="BIAYA MINIMAL"
                     android:inputType="number"
