--- a/app/src/main/res/layout/activity_atur_tenda_.xml
+++ b/app/src/main/res/layout/activity_atur_tenda_.xml
@@ -19,6 +19,55 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp">
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="TIPE WAKTU"
+                    android:textColor="@color/red_900" />
+
+                <Spinner
+                    android:id="@+id/sp_tipeWaktu_tenda"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/tipeWaktu_tenda"
+                    android:textAlignment="center"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/ly_hari_tenda"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp">
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="HARI"
+                    android:textColor="@color/red_900" />
+
+                <Spinner
+                    android:id="@+id/sp_hari_tenda"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/hari_tenda"
+                    android:textAlignment="center"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/ly_tanggal_tenda"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
@@ -38,8 +87,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
-                        android:hint="TANGGAL MULAI"
-                        />
+                        android:hint="TANGGAL MULAI" />
 
 
                 </android.support.design.widget.TextInputLayout>
@@ -58,50 +106,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAlignment="center"
-                        android:hint="TANGGAL SELESAI"
-                        />
+                        android:hint="TANGGAL SELESAI" />
 
 
                 </android.support.design.widget.TextInputLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp">
-
-                <TextView
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TIPE TENDA"
-                    android:textColor="@color/red_900"/>
-
-            <RadioGroup
-                android:id="@+id/rg_tipe_tenda"
-                android:layout_width="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <RadioButton
-                    android:id="@+id/rb_tetap"
-                    android:text="TETAP"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-                <RadioButton
-                    android:id="@+id/rb_mobile"
-                    android:text="MOBILE"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </RadioGroup>
 
             </LinearLayout>
 
@@ -139,22 +147,18 @@
                 <EditText
                     android:id="@+id/et_alamat_tenda"
                     android:layout_width="match_parent"
-                    android:maxLines="5"
-                    android:ems="50"
+                    android:inputType="textMultiLine"
+                    android:gravity="top|left"
                     android:layout_height="100dp"
                     android:hint="ALAMAT"/>
 
 
             </android.support.design.widget.TextInputLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tl_longlat"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="250dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
@@ -170,18 +174,6 @@
 
             </android.support.design.widget.TextInputLayout>
 
-                <Button
-                    android:id="@+id/btn_getLocation_tenda"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Get"
-                    android:background="@drawable/btn_rounded_accent"
-                    android:textColor="@color/white_transparency"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginRight="5dp" />
-
-
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_marginTop="10dp"
