Menambahkan beberapa Activity

--- a/app/src/main/res/layout/activity_booking2_.xml
+++ b/app/src/main/res/layout/activity_booking2_.xml
@@ -74,11 +74,11 @@
                     android:textStyle="bold"
                     android:text="JAM JEMPUT"/>
 
-                <Button
+                <TextView
                     android:id="@+id/btn_getJemput_booking2"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/ic_clock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_clock"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp" />
 
@@ -149,11 +149,12 @@
                     android:textStyle="bold"
                     android:text="JAM ANTAR" />
 
-                <Button
+                <TextView
                     android:id="@+id/btn_getAntar_booking2"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/ic_clock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/ic_clock"
+                    android:textAlignment="center"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"/>
 
