--- a/app/src/main/res/layout/activity_atur_jurnal_.xml
+++ b/app/src/main/res/layout/activity_atur_jurnal_.xml
@@ -42,6 +42,8 @@
                         android:id="@+id/tv_date_jurnal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:textStyle="bold"
                         android:layout_weight="1"
                         android:drawableStart="@drawable/ic_date" />
 
@@ -131,9 +133,11 @@
 
                     <TextView
                         android:id="@+id/tv_kontak_jurnal"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:drawableStart="@drawable/ic_contact_phone"
+                        android:textAlignment="center"
+                        android:textStyle="bold"
                         android:layout_weight="1" />
 
                 </LinearLayout>
@@ -156,9 +160,11 @@
 
                     <TextView
                         android:id="@+id/tv_mulaiSewa_jurnal"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:textAlignment="center"
+                        android:textStyle="bold"
                         android:drawableLeft="@drawable/ic_date" />
 
                     <TextView
@@ -171,9 +177,11 @@
 
                     <TextView
                         android:id="@+id/tv_selesaiSewa_jurnal"
-                            android:layout_width="30dp"
+                        android:layout_width="wrap_content"
                         android:layout_weight="1"
-                            android:layout_height="30dp"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:textStyle="bold"
                         android:drawableRight="@drawable/ic_date" />
 
 
@@ -198,13 +206,13 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/btn_simpan_jurnal"
+                android:id="@+id/btn_lanjut_jurnal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_margin="10dp"
                 android:background="@drawable/btn_rounded_accent"
-                android:text="SIMPAN"
+                android:text="LANJUT"
                 android:textColor="@color/white_transparency" />
 
 
