--- a/app/src/main/res/layout/activity_atur_terima_part.xml
+++ b/app/src/main/res/layout/activity_atur_terima_part.xml
@@ -47,7 +47,7 @@
 
                 <TextView
                     android:id="@+id/textView46"
-                    android:layout_width="250sp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Tipe Supplier" />
@@ -129,7 +129,6 @@
                         android:layout_width="40sp"
                         android:layout_height="50sp"
                         android:layout_weight="1"
-                        android:textAlignment="center"
                         android:drawableLeft="@drawable/ic_date" />
 
 
@@ -159,8 +158,7 @@
                         android:layout_width="40sp"
                         android:layout_height="40sp"
                         android:drawableLeft="@drawable/ic_date"
-                        android:layout_weight="1"
-                        android:textAlignment="center"/>
+                        android:layout_weight="1" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -179,7 +177,7 @@
 
                     <TextView
                         android:id="@+id/textView41"
-                        android:layout_width="250dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Pembayaran"
                         android:layout_weight="1"/>
@@ -219,7 +217,6 @@
                         android:layout_width="40sp"
                         android:layout_height="40sp"
                         android:layout_weight="1"
-                        android:textAlignment="center"
                         android:drawableLeft="@drawable/ic_date" />
 
                 </LinearLayout>
