--- a/app/src/main/res/layout/activity_booking1_a_.xml
+++ b/app/src/main/res/layout/activity_booking1_a_.xml
@@ -7,44 +7,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.widget.NestedScrollView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
-
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-
-            <android.support.design.widget.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp">
+                android:layout_height="wrap_content">
 
-                <com.rkrzmail.srv.NikitaAutoComplete
-                    android:id="@+id/et_nopol_booking1"
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:maxEms="10"
-                    android:textAlignment="center"
-                    android:hint="NO. POLISI"
-                    />
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp">
+
+                    <com.rkrzmail.srv.NikitaAutoComplete
+                        android:id="@+id/et_nopol_booking1a"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="number"
+                        android:maxLength="10"
+                        android:hint="NO. POLISI" />
+
+                </android.support.design.widget.TextInputLayout>
 
 
-            </android.support.design.widget.TextInputLayout>
+                <ProgressBar
+                    android:id="@+id/pb_etNopol_booking1a"
+                    style="?android:attr/progressBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|right"
+                    android:layout_marginRight="20dp"
+                    android:visibility="gone" />
 
+
+            </FrameLayout>
 
             <Button
-                android:id="@+id/btn_history_booking1"
+                android:id="@+id/btn_history_booking1a"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="History"
@@ -55,47 +64,72 @@
                 android:layout_marginRight="10dp"
                 android:textColor="@color/white_transparency"/>
 
-            <android.support.design.widget.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp">
+                android:layout_height="wrap_content">
 
-                <com.rkrzmail.srv.NikitaAutoComplete
-                    android:id="@+id/et_jenisKendaraan_booking1"
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textAlignment="center"
-                    android:hint="JENIS KENDARAAN"
-                    />
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp">
 
-            </android.support.design.widget.TextInputLayout>
+                    <com.rkrzmail.srv.NikitaAutoComplete
+                        android:id="@+id/et_jenisKendaraan_booking1a"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text"
+                        android:maxLength="20"
+                        android:hint="JENIS KENDARAAN" />
 
-            <android.support.design.widget.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                </android.support.design.widget.TextInputLayout>
+
+                <ProgressBar
+                    android:id="@+id/pb_etJenisKendaraan_booking1a"
+                    style="?android:attr/progressBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|right"
+                    android:layout_marginRight="20dp"
+                    android:visibility="gone" />
+
+            </FrameLayout>
+
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp">
+                android:layout_height="wrap_content">
 
-                <com.rkrzmail.srv.NikitaAutoComplete
-                    android:id="@+id/et_noPonsel_booking1"
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textAlignment="center"
-                    android:hint="NO PONSEL" />
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp">
+
+                    <com.rkrzmail.srv.NikitaAutoComplete
+                        android:id="@+id/et_noPonsel_booking1a"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="number"
+                        android:maxLength="14"
+                        android:hint="NO PONSEL" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <ProgressBar
+                    android:id="@+id/pb_etNoPonsel_booking1a"
+                    style="?android:attr/progressBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|right"
+                    android:layout_marginRight="20dp"
+                    android:visibility="gone" />
 
 
-            </android.support.design.widget.TextInputLayout>
+            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -112,19 +146,17 @@
                     android:layout_marginTop="5dp">
 
                     <EditText
-                        android:id="@+id/et_namaPelanggan_booking1"
+                        android:id="@+id/et_namaPelanggan_booking1a"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="text"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:textAlignment="center"
+                        android:maxLength="30"
                         android:hint="NAMA PELANGGAN" />
 
                 </android.support.design.widget.TextInputLayout>
 
                     <CheckBox
-                        android:id="@+id/cb_pemilik_booking1"
+                        android:id="@+id/cb_pemilik_booking1a"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -144,20 +176,47 @@
                 android:layout_marginTop="5dp">
 
                 <TextView
+                    android:id="@+id/txttittle9"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:textColor="@color/red_900"
+                    android:text="PEKERJAAN" />
+
+                <Spinner
+                    android:id="@+id/sp_pekerjaan_booking1a"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp">
+
+                <TextView
                     android:id="@+id/txttittle1"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textStyle="bold"
                     android:textSize="16sp"
-                    android:text="KONDISI KENDARAAN"/>
+                    android:text="KONDISI KENDARAAN" />
 
                 <Spinner
-                    android:id="@+id/sp_kondisi_booking1"
+                    android:id="@+id/sp_kondisi_booking1a"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:entries="@array/kondisi_kendaraan_booking"/>
+                    android:entries="@array/kondisi_kendaraan_booking" />
 
             </LinearLayout>
 
@@ -170,66 +229,16 @@
                 android:layout_marginTop="5dp">
 
                 <EditText
-                    android:id="@+id/et_keluhan_booking1"
+                    android:id="@+id/et_keluhan_booking1a"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:inputType="textMultiLine"
                     android:gravity="top|left"
+                    android:maxLength="200"
                     android:hint="KELUHAN" />
 
 
             </android.support.design.widget.TextInputLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp">
-
-                <TextView
-                    android:id="@+id/txttittle2"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textStyle="bold"
-                    android:textSize="16sp"
-                    android:text="LOKASI LAYANAN"/>
-
-                <Spinner
-                    android:id="@+id/sp_lokasiLayanan_booking1"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:entries="@array/lokasi_layanan_booking"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/ly_cb_booking"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp">
-
-                <CheckBox
-                    android:id="@+id/cb_jemput_booking1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="JEMPUT"
-                    android:layout_weight="1"/>
-
-                <CheckBox
-                    android:id="@+id/cb_antar_booking1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="ANTAR"
-                    android:layout_weight="1"/>
-
-            </LinearLayout>
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -248,7 +257,7 @@
                     android:text="LAYANAN"/>
 
                 <Spinner
-                    android:id="@+id/sp_layanan_booking1"
+                    android:id="@+id/sp_layanan_booking1a"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
@@ -264,42 +273,17 @@
                 android:layout_marginTop="5dp">
 
                 <com.rkrzmail.srv.NikitaAutoComplete
-                    android:id="@+id/et_km_booking1"
+                    android:id="@+id/et_km_booking1a"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textAlignment="center"
                     android:hint="KM" />
 
 
             </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/tl_alamat_booking"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp">
-
-                <EditText
-                    android:id="@+id/et_alamat_booking1"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:inputType="textMultiLine"
-                    android:maxLines="1"
-                    android:enabled="false"
-                    android:singleLine="true"
-                    android:gravity="top|left"
-                    android:hint="ALAMAT" />
-
-            </android.support.design.widget.TextInputLayout>
-
             <Button
-                android:id="@+id/btn_lanjut_booking1"
+                android:id="@+id/btn_lanjut_booking1a"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="LANJUT"
@@ -312,7 +296,7 @@
                 android:layout_marginBottom="10dp"/>
 
         </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+    </ScrollView>
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
