--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -136,6 +136,13 @@
         <item>BIAYA</item>
     </string-array>
 
+    <string-array name="tipe_pembayaran">
+        <item>CASH</item>
+        <item>TRANSFER</item>
+        <item>DEBIT</item>
+        <item>KREDIT</item>
+    </string-array>
+
     <string-array name="pos_jurnal">
         <item>PENDAPATAN LAIN</item>
         <item>BIAYA PEMASARAN</item>
